5/packages/angular_test/src/errors/will_never_stabilize.template.module
{"p":["angular_test","lib/src/errors/will_never_stabilize.template.dart"],"s":[["angular_test","lib/src/errors/will_never_stabilize.template.dart"]],"d":[["angular_test","lib/src/errors/will_never_stabilize.dart"]]}